# riva_acr_mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  USAGE.md  config.example  pyproject.toml  requirements.txt  run_server.py
examples/: client_example.py
src/parakeet_acr_mcp/: __init__.py  server.py
src/riva_acr_mcp/: __init__.py  server.py
