[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parakeet-acr-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for Parakeet ACR"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Parakeet ACR Team" }
]
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
parakeet-acr-mcp = "parakeet_acr_mcp.server:main"

[tool.uv]
dev-dependencies = []
