[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riva-acr-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for NVIDIA Riva ASR"
# readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "NVIDIA Riva ASR Team" }
]
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "nvidia-riva-client>=2.14.0",
    "pydub>=0.25.1",
]

[project.scripts]
riva-acr-mcp = "riva_acr_mcp.server:main"

[tool.uv]
dev-dependencies = []
